[gd_scene load_steps=5 format=2]

[ext_resource path="res://props/button_laser.png" type="Texture" id=1]
[ext_resource path="res://props/button_laser.gd" type="Script" id=2]
[ext_resource path="res://pieces/shift_detector.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[node name="button_laser" type="Node2D"]
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="raycast" type="RayCast2D" parent="."]
position = Vector2( 0, -16 )
enabled = true
cast_to = Vector2( 0, -2000 )
collision_mask = 7

[node name="line" type="Line2D" parent="."]
position = Vector2( 0, -16 )
points = PoolVector2Array( 0, 0, 0, 0 )
width = 1.0
default_color = Color( 0.980392, 0.415686, 0.0392157, 1 )

[node name="reset_timer" type="Timer" parent="."]
one_shot = true

[node name="shift_detector" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -8 )

[node name="hitbox" type="CollisionShape2D" parent="shift_detector"]
shape = SubResource( 1 )

[connection signal="timeout" from="reset_timer" to="." method="_on_reset_timer_timeout"]
[connection signal="shifted" from="shift_detector" to="." method="_on_shift"]
